--- a/app/src/main/res/layout/activity_pdfview_edit.xml
+++ b/app/src/main/res/layout/activity_pdfview_edit.xml
@@ -19,25 +19,12 @@
         <RelativeLayout
             android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="@dimen/space_5">
-
-            <ui.CustomtextView
-                font:name = "GOTHAM_BOLD"
-                android:textColor="@color/white"
-                android:textSize="@dimen/space_14"
-                android:text="EDIT"
-                android:background="@drawable/btn_shape_all_blue"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/space_35"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="@dimen/space_25"
-                android:id="@+id/btnDistribusi"
-                android:gravity="fill_vertical"
-                android:layout_marginTop="@dimen/space_5"
-                android:paddingLeft="@dimen/space_20"
-                android:paddingRight="@dimen/space_20" />
+            android:layout_height="422dp"
+            android:layout_marginLeft="@dimen/space_10"
+            android:layout_marginRight="@dimen/space_10"
+            android:layout_above="@+id/btnDistribusi"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="@dimen/space_10">
 
             <com.github.barteksc.pdfviewer.PDFView
                 android:id="@+id/pdfView"
@@ -46,17 +33,42 @@
                 android:layout_marginLeft="@dimen/space_5"
                 android:layout_marginRight="@dimen/space_5"
                 android:background="@color/white"
-                android:layout_above="@+id/btnDistribusi"
-                android:layout_alignParentTop="true">
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true">
 
             </com.github.barteksc.pdfviewer.PDFView>
 
+
         </RelativeLayout>
 
+        <RelativeLayout
+            android:id="@+id/btnDistribusi"
+            android:background="@color/colorSearch"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true">
 
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true">
 
+                <ui.CustomtextView
+                    font:name = "GOTHAM_BOLD"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/space_14"
+                    android:text="EDIT"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="fill_vertical"
+
+                    android:paddingRight="@dimen/space_5"/>
+
+            </LinearLayout>
+        </RelativeLayout>
 
     </RelativeLayout>
-
-
 </LinearLayout>
