--- a/app/src/main/res/layout/fragment_home_detail.xml
+++ b/app/src/main/res/layout/fragment_home_detail.xml
@@ -4,16 +4,30 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
-        android:id="@+id/layout_chart"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/chart"
+        <RelativeLayout
+            android:id="@+id/layout_chart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/contact_us_header_container" />
+            android:layout_above="@+id/spinner_month">
 
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/chart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/contact_us_header_container" />
+
+        </RelativeLayout>
+
+        <Spinner
+            android:layout_width="@dimen/space_150"
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/spinner_month"></Spinner>
     </RelativeLayout>
+
 </RelativeLayout>
