--- a/app/src/main/res/layout/row_bbs_semua_pesanan.xml
+++ b/app/src/main/res/layout/row_bbs_semua_pesanan.xml
@@ -5,21 +5,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:font="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    card_view:cardCornerRadius="5dp"
     style="@style/MyCardViewStyle"
     card_view:cardUseCompatPadding="true" >
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="118dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/space_5"
+        android:layout_marginRight="@dimen/space_5"
+        android:id="@+id/linearLayout">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -60,62 +60,92 @@
                 android:layout_alignRight="@+id/text_time"
                 android:layout_alignEnd="@+id/text_time"
                 android:layout_marginLeft="@dimen/space_5"
-                android:layout_marginRight="@dimen/space_5"
+
                 android:layout_marginTop="@dimen/space_5">
 
                 <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHTITALIC"
-                    android:id="@+id/lbl_attach"
-                    android:text="Attachemnt"
+                    font:name="GOTHAM_BOLD"
+                    android:id="@+id/lbl_Judul"
+                    android:text="Tutorial Backup Hapus Email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:layout_marginTop="@dimen/space_7"
+                    android:layout_marginLeft="@dimen/space_7"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
+
+                <ui.CustomtextView
+                    font:name="GOTHAM_LIGHT"
+                    android:id="@+id/lbl_Isi"
                     android:textSize="@dimen/space_12"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:layout_below="@+id/lbl_Judul"
+                    android:layout_marginTop="@dimen/space_3"
+                    android:layout_marginLeft="@dimen/space_7"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
+
+                <ui.CustomtextView
+                    font:name="GOTHAM_LIGHTITALIC"
+                    android:id="@+id/lbl_attach1"
+                    android:textSize="@dimen/space_12"
+                    android:text="Attachments :"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:textStyle="italic"
-                    android:layout_alignTop="@+id/imageView6"
-                    android:layout_toRightOf="@+id/imageView6"
-                    android:layout_toEndOf="@+id/imageView6"
-                    android:layout_marginLeft="@dimen/space_3"
-                    android:layout_marginRight="@dimen/space_5" />
+                    android:layout_below="@+id/lbl_Isi"
+                    android:layout_marginTop="@dimen/space_7"
+                    android:layout_marginLeft="@dimen/space_7"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true" />
 
                 <ui.CustomtextView
-                    font:name = "GOTHAM_LIGHTITALIC"
-                    android:id="@+id/lbl_size"
+                    font:name="GOTHAM_LIGHTITALIC"
+                    android:id="@+id/lbl_attach"
                     android:textSize="@dimen/space_12"
                     android:text="Attachemnt asdas asdas"
-                    android:layout_marginLeft="@dimen/space_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/lbl_attach"
+                    android:textStyle="italic"
                     android:maxLines="1"
-                    android:layout_alignBottom="@+id/imageView6"
+                    android:layout_marginLeft="@dimen/space_5"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignTop="@+id/imageView6"
+                    android:layout_toRightOf="@+id/imageView6"
+                    android:layout_toEndOf="@+id/imageView6" />
+
+                <ui.CustomtextView
+                    font:name="GOTHAM_LIGHTITALIC"
+                    android:id="@+id/lbl_size"
+                    android:textSize="@dimen/space_12"
+                    android:layout_marginLeft="@dimen/space_5"
+                    android:text="Attachemnt asdas asdas asd asd"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textStyle="italic"
+                    android:maxLines="1"
+                    android:layout_below="@+id/lbl_attach"
                     android:layout_toRightOf="@+id/imageView6"
                     android:layout_toEndOf="@+id/imageView6"
-                    android:layout_marginRight="@dimen/space_5"
-                    android:textStyle="italic" />
+                    android:layout_marginTop="1dp"
+                    android:layout_marginBottom="@dimen/space_3"/>
 
                 <ImageView
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_30"
                     android:id="@+id/imageView6"
-                    android:layout_alignParentTop="true"
+                    android:layout_below="@+id/lbl_attach1"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:src="@drawable/pdf"
+                    android:layout_marginTop="@dimen/space_7"
                     android:layout_marginLeft="@dimen/space_7"
-                    android:layout_marginTop="@dimen/space_10"
-                    android:layout_marginBottom="@dimen/space_10" />
-
-                <ImageView
-                    android:visibility="gone"
-                    android:layout_width="@dimen/space_35"
-                    android:layout_height="@dimen/space_35"
-                    android:id="@+id/imageView15"
-                    android:layout_alignTop="@+id/lbl_attach"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:src="@drawable/circle_kosong"
-                    android:layout_marginRight="@dimen/space_5" />
+                    android:layout_marginBottom="@dimen/space_7"
+                    android:src="@drawable/pdf" />
 
 
             </RelativeLayout>
@@ -129,41 +159,78 @@
                 android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/text_time" />
 
-            <RelativeLayout
-                android:drawableLeft="@drawable/downloadsave32"
-                android:id="@+id/btnDownload"
-                android:background="@drawable/btn_shape_all_blue"
-                android:text="  lihat dokumen  "
-                android:textColor="#ffffff"
-                android:textSize="@dimen/space_12"
-                android:layout_width="120dp"
-                android:layout_height="@dimen/space_30"
-                android:layout_below="@+id/layout_attachment"
-                android:layout_marginTop="@dimen/space_3"
-                android:layout_alignRight="@+id/layout_attachment"
-                android:layout_alignEnd="@+id/layout_attachment">
-                <ImageView
-                    android:src="@drawable/downloadsave32"
-                    android:layout_width="@dimen/space_25"
-                    android:layout_height="@dimen/space_25"
-                    android:layout_marginRight="@dimen/space_3" />
-
-                <ui.CustomtextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="  lihat dokumen"
-                    android:textColor="#ffffff"
-                    android:textSize="@dimen/space_10"
-                    font:name="GOTHAM_BLACK"
-
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true" />
-            </RelativeLayout>
-
         </RelativeLayout>
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/space_35"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="@dimen/space_5"
+        android:layout_marginLeft="@dimen/space_5"
+        android:layout_alignParentStart="true">
+
+        <RelativeLayout
+            android:drawableLeft="@drawable/download24"
+            android:id="@+id/btnDownload"
+            android:layout_width="115dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/btn_shape_all_blue"
+
+            android:gravity="center"
+            android:text="  lihat dokumen  "
+            android:textColor="#ffffff"
+            android:textSize="@dimen/space_12"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="@dimen/space_5"
+            android:layout_marginRight="@dimen/space_10" >
+            <ImageView
+                android:src="@drawable/downloadsave32"
+                android:layout_width="@dimen/space_25"
+                android:layout_height="@dimen/space_25"
+                android:layout_marginRight="@dimen/space_3" />
+
+            <ui.CustomtextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="lihat dokumen"
+                android:textColor="#ffffff"
+                android:textSize="@dimen/space_10"
+                font:name="GOTHAM_BLACK"
+
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
+
+        <ImageView
+            android:layout_width="@dimen/space_18"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ball_red"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="@dimen/space_10"
+            android:id="@+id/img_status" />
+
+        <ui.CustomtextView
+            font:name = "GOTHAM_BOLD"
+            android:text="tinggi"
+            android:id="@+id/text_status"
+            android:layout_marginBottom="@dimen/space_10"
+            android:gravity="fill_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@+id/img_status"
+            android:layout_toEndOf="@+id/img_status" />
+
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
