--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -216,6 +216,11 @@
                     android:background="@color/white"/>
             </LinearLayout>
 
+            <LinearLayout
+                android:background="@color/colorSecondaryBackground"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/space_30"></LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
