Add API DIsposisi + Loadmore bbs

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,6 +75,7 @@
                 android:textSize="@dimen/space_14"
                 android:textColor="@color/black"
                 android:hint="Username"
+                android:text="admin1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/space_30" />
@@ -104,6 +105,7 @@
                 android:layout_marginTop="-2dp" />
             <ui.CustomEditText
                 android:id="@+id/edt_password"
+                android:text="admin12345"
                 android:singleLine="true"
                 android:background="@color/transparant_pure"
                 android:textColorHint="@color/colorSearch"
