--- a/app/src/main/res/layout/row_persuratan_dikembalikan.xml
+++ b/app/src/main/res/layout/row_persuratan_dikembalikan.xml
@@ -108,15 +108,14 @@
 
                 <ImageView
                     android:visibility="gone"
-                    android:layout_width="@dimen/space_25"
-                    android:layout_height="@dimen/space_25"
+                    android:layout_width="@dimen/space_35"
+                    android:layout_height="@dimen/space_35"
                     android:id="@+id/imageView15"
                     android:layout_alignTop="@+id/lbl_attach"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:src="@drawable/circle_kosong"
-                    android:layout_marginTop="@dimen/space_3"
-                    android:layout_marginRight="@dimen/space_10" />
+                    android:layout_marginRight="@dimen/space_5" />
 
 
             </RelativeLayout>
@@ -129,6 +128,43 @@
                 android:layout_toStartOf="@+id/text_time"
                 android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/text_time" />
+
+            <RelativeLayout
+                android:id="@+id/btnPrint"
+                android:layout_height="@dimen/space_35"
+                android:background="@drawable/btn_shape_all_transparant_blue"
+                android:text="lihat detail"
+                android:textColor="#ffffff"
+                android:textSize="@dimen/space_12"
+                android:layout_alignTop="@+id/btnDownload"
+                android:layout_toLeftOf="@+id/btnDownload"
+                android:layout_toStartOf="@+id/btnDownload"
+                android:layout_width="105dp"
+                android:layout_marginRight="@dimen/space_3"
+                android:layout_alignBottom="@+id/btnDownload">
+                <ImageView
+                    android:id="@+id/imgInfo"
+                    android:src="@drawable/info_32"
+                    android:tint="@color/grey"
+                    android:layout_width="@dimen/space_25"
+                    android:layout_height="@dimen/space_25" />
+
+                <ui.CustomtextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="lihat detail"
+                    android:tint="@color/grey"
+                    android:textSize="@dimen/space_10"
+                    font:name="GOTHAM_BLACK"
+                    android:id="@+id/textInfo"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:gravity="fill_vertical"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginLeft="@dimen/space_30" />
+            </RelativeLayout>
 
             <RelativeLayout
                 android:drawableLeft="@drawable/download24"
@@ -144,8 +180,8 @@
                 android:layout_alignEnd="@+id/layout_attachment"
                 android:layout_width="103dp">
                 <ImageView
-                    android:src="@drawable/downloadsave32"
                     android:id="@+id/imgDownload"
+                    android:src="@drawable/downloadsave32"
                     android:tint="@color/colorAccept"
                     android:layout_width="@dimen/space_25"
                     android:layout_height="@dimen/space_25"
@@ -156,7 +192,7 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:text="lihat surat"
-                    android:textColor="@color/grey"
+                    android:tint="@color/grey"
                     android:textSize="@dimen/space_10"
                     font:name="GOTHAM_BLACK"
                     android:id="@+id/textDownload"
