--- a/app/src/main/res/layout/fragment_persuratan_umum.xml
+++ b/app/src/main/res/layout/fragment_persuratan_umum.xml
@@ -140,71 +140,106 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:visibility="gone"
+            android:orientation="vertical"
+            android:visibility="visible"
             android:id="@+id/layout_button"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true">
 
             <LinearLayout
-                android:id="@+id/btnDisposisi"
+                android:visibility="gone"
                 android:orientation="horizontal"
-                android:background="@color/colorSelectButton"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:layout_weight="1">
+                android:id="@+id/layout_button_distri_dispos"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/space_40"
+                android:layout_alignParentBottom="true">
 
-                <ui.CustomtextView
-                    font:name = "GOTHAM_BOLD"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/space_14"
-                    android:text="DISPOSISI WEB"
+                <LinearLayout
+                    android:id="@+id/btnDisposisi"
+                    android:orientation="horizontal"
+                    android:background="@color/colorSelectButton"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="fill_vertical"
+                    android:layout_height="@dimen/space_40"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"
+                    android:layout_weight="1">
 
-                    android:paddingRight="@dimen/space_5"/>
+                    <ui.CustomtextView
+                        font:name = "GOTHAM_BOLD"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/space_14"
+                        android:text="DISPOSISI WEB"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="fill_vertical"
 
-                <ImageView
-                    android:src="@drawable/right"
-                    android:layout_marginLeft="@dimen/space_5"
-                    android:layout_gravity="fill_vertical"
-                    android:layout_width="@dimen/space_20"
-                    android:layout_height="match_parent"
-                    android:id="@+id/imageView17" />
+                        android:paddingRight="@dimen/space_5"/>
+
+                    <ImageView
+                        android:src="@drawable/right"
+                        android:layout_marginLeft="@dimen/space_5"
+                        android:layout_gravity="fill_vertical"
+                        android:layout_width="@dimen/space_20"
+                        android:layout_height="match_parent"
+                        android:id="@+id/imageView17" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/btnDistribusi"
+                    android:orientation="horizontal"
+                    android:background="@color/colorAccept"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/space_40"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"
+                    android:layout_weight="1">
+
+                    <ui.CustomtextView
+                        font:name = "GOTHAM_BOLD"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/space_14"
+                        android:text="DISTRIBUSIKAN"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="fill_vertical"
+
+                        android:paddingRight="@dimen/space_5"/>
+
+                    <ImageView
+                        android:src="@drawable/right"
+                        android:layout_marginLeft="@dimen/space_5"
+                        android:layout_gravity="fill_vertical"
+                        android:layout_width="@dimen/space_20"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/btnDistribusi"
-                android:orientation="horizontal"
-                android:background="@color/colorAccept"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
+                android:orientation="vertical"
+                android:background="@color/colorSearch"
+                android:visibility="gone"
+                android:id="@+id/layout_button_kembali"
                 android:gravity="center"
-                android:layout_weight="1">
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_above="@+id/layout_button">
 
                 <ui.CustomtextView
                     font:name = "GOTHAM_BOLD"
                     android:textColor="@color/white"
                     android:textSize="@dimen/space_14"
-                    android:text="DISTRIBUSIKAN"
+                    android:text="KEMBALI"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="fill_vertical"
+                    android:gravity="center"
 
-                    android:paddingRight="@dimen/space_5"/>
+                    android:paddingRight="@dimen/space_5"
+                    android:layout_marginLeft="@dimen/space_10" />
 
-                <ImageView
-                    android:src="@drawable/right"
-                    android:layout_marginLeft="@dimen/space_5"
-                    android:layout_gravity="fill_vertical"
-                    android:layout_width="@dimen/space_20"
-                    android:layout_height="match_parent" />
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
