--- a/app/src/main/res/layout/row_disposisi_tertanda.xml
+++ b/app/src/main/res/layout/row_disposisi_tertanda.xml
@@ -8,38 +8,55 @@
     <LinearLayout
         android:id="@+id/layout_row"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="@dimen/space_55">
 
-        <ui.CustomtextView
-            font:name = "GOTHAM_BOLD"
-            android:id="@+id/text_susunan"
-            android:text="Susunan"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="fill_vertical"
-            android:layout_marginLeft="@dimen/space_12" />
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+            <ui.CustomtextView
+                font:name = "GOTHAM_BOLD"
+                android:id="@+id/text_susunan"
+                android:text="Susunan"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="fill_vertical"
+                android:layout_marginLeft="@dimen/space_12" />
+        </RelativeLayout>
 
-        <ui.CustomtextView
-            font:name = "GOTHAM_LIGHT"
-            android:id="@+id/text_1"
-            android:text="1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="fill_vertical"
-            android:layout_marginLeft="@dimen/space_3" />
 
-        <ui.CustomtextView
-            font:name = "GOTHAM_LIGHT"
-            android:id="@+id/text_2"
-            android:text="2"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="fill_vertical"
-            android:layout_marginLeft="@dimen/space_3" />
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <ui.CustomtextView
+                font:name = "GOTHAM_LIGHT"
+                android:id="@+id/text_1"
+                android:text="1"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:gravity="fill_vertical"
+                android:layout_marginLeft="@dimen/space_3" />
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <ui.CustomtextView
+                font:name = "GOTHAM_LIGHT"
+                android:id="@+id/text_2"
+                android:text="2"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:gravity="fill_vertical"
+                android:layout_marginLeft="@dimen/space_3" />
+        </RelativeLayout>
+
     </LinearLayout>
 
 </LinearLayout>
